--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.73.6"
   },
   "devDependencies": {
